src/test/deca/codegen/valid/tests/classBasic.deca
// Description:
//   test d'appel de méthode facile
//
// Resultats:
//      1
//      42
//
//

class A {
	int x = 2;

	int getX() {
		return 8;
	}

	void setX(int x) {
		this.x = x;
	}
}

{
	A a = new A();
	A b = new A();

	a.x = 5;

	println(a.x);
	println(b.x);
}
