src/test/deca/codegen/invalid/tests/derefNullSetLvalue.deca
class A {
	int x = 1;
}

{
	A a = new A();
	a = null;
	a.x = 5;
}
